# lian-li-linux

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  lianli-gui.desktop
.github/workflows/: rust.yml
crates/lianli-daemon/: Cargo.toml
crates/lianli-daemon/src/: config_watcher.rs  fan_controller.rs  ipc_server.rs  main.rs  rgb_controller.rs  service.rs
crates/lianli-devices/: Cargo.toml
crates/lianli-devices/examples/: test_hid_attach.rs
crates/lianli-devices/src/: crypto.rs  detect.rs  display_switcher.rs  ene6k77.rs  galahad2_lcd.rs  galahad2_trinity.rs  hydroshift2_lcd.rs  hydroshift_lcd.rs  lancool207.rs  lib.rs  slv3_lcd.rs  tl_fan.rs  tl_lcd.rs  traits.rs  universal_screen.rs  winusb_lcd.rs  wireless.rs
crates/lianli-gui/: Cargo.toml  index.html  package.json  vite.config.ts
crates/lianli-gui/src/: App.vue  backend.rs  conversions.rs  main.rs  main.ts  router.ts  style.css  types.ts
crates/lianli-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/lianli-gui/src-tauri/src/: commands.rs  ipc_client.rs  main.rs
crates/lianli-gui/src/components/: DeviceCard.vue  FanCurveEditor.vue  LcdConfigCard.vue  PageHeader.vue  RgbDeviceCard.vue  Sidebar.vue
crates/lianli-gui/src/stores/: config.ts  devices.ts
crates/lianli-gui/src/views/: DevicesView.vue  FansView.vue  LcdView.vue  RgbView.vue  SettingsView.vue
crates/lianli-gui/ui/: main.slint  page_header.slint  theme.slint  widgets.slint
crates/lianli-gui/ui/components/: color_picker.slint  fan_curve_editor.slint
crates/lianli-gui/ui/pages/: devices.slint  fans.slint  lcd.slint  settings.slint
crates/lianli-gui2/src/: backend.rs  conversions.rs  main.rs  state.rs
crates/lianli-gui2/ui/: main.slint  sidebar.slint
crates/lianli-gui2/ui/pages/: fans.slint  rgb.slint
crates/lianli-media/: Cargo.toml
crates/lianli-media/src/: common.rs  image.rs  lib.rs  sensor.rs  video.rs
crates/lianli-shared/: Cargo.toml
crates/lianli-shared/src/: config.rs  device_id.rs  fan.rs  ipc.rs  lib.rs  media.rs  rgb.rs  screen.rs
crates/lianli-transport/: Cargo.toml
crates/lianli-transport/src/: error.rs  hid.rs  hid_backend.rs  lib.rs  rusb_hid.rs  usb.rs
docker/: build.Dockerfile
packaging/archlinux/: .gitignore  PKGBUILD
systemd/: lianli-daemon.service
udev/: 99-lianli.rules
