[package]
name = "lianli-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lianli-daemon"
path = "src/main.rs"

[dependencies]
lianli-shared = { path = "../lianli-shared" }
lianli-transport = { path = "../lianli-transport" }
lianli-devices = { path = "../lianli-devices" }
lianli-media = { path = "../lianli-media" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
rusb = { workspace = true }
hidapi = { workspace = true }
notify = { workspace = true }
